--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clsx": "^2.1.1",
     "lenis": "^1.3.17",
     "motion": "^12.23.26",
-    "next": "16.1.1",
+    "next": "^16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
